# todo

./: .env  .env.example  Makefile  README.md  docker-compose.yaml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/app/: app.py  depends.py  settings.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0b2bfb025110_add_relation.py  799d42910a2c_add_task_model.py  ebe8482fe9c4_add_norification_send_field.py  f15993a714e3_user_model.py
backend/app/api/v1/: __init__.py  auth.py  tasks.py
backend/app/database/: __init__.py  base.py  helpers.py  task.py  users.py
backend/app/services/: auth.py  base.py  task.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: index.tsx
frontend/src/laylout/: Header.tsx  SplitBackgroundLayout.tsx
frontend/src/pages/: Login.tsx  Register.tsx  Todo.tsx
frontend/src/services/: api.ts  auth.ts  task.ts  toast.tsx
frontend/src/ui/: notificationList.tsx  toast.tsx
