[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alex Remnev <alexremnev2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.19"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
